# bolt-core-sdk

./: .gitignore  LICENSE  LOCALBOLT_PROFILE.md  PROTOCOL.md  README.md  VECTOR_AUTHORITY.md  package.json
.github/workflows/: ci-gate.yml  ci-rust.yml  ci-transport-web.yml  ci-windows-desktop.yml  ci.yml  publish-bolt-core-npmjs.yml  publish-bolt-core.yml  publish-transport-web-npmjs.yml  publish-transport-web.yml
docs/: API_SURFACE.md  AUDIT_TRACKER.md  BOUNDARY_CONTRACT.md  CHANGELOG.md  COMPATIBILITY.md  CORE_EXTRACTION_MAP.md  ECOSYSTEM_STRATEGY.md  INTEGRATION_GUIDE.md  INTEROP_TEST_PLAN.md  PROTOCOL_CONTRACT.md  README.md  RELEASE_PLAYBOOK.md  SDK_AUTHORITY.md  SDK_STABILITY.md  SECURITY_POSTURE.md  SESSION_CONTRACT.md  STATE.md  SUPPLY_CHAIN.md  TRANSPORT_CONTRACT.md  TRANSPORT_UPGRADE_PROTOCOL.md
docs/conformance/: LOCALBOLT_CONFORMANCE.md
docs/ecosystem/: README.md  RUST_CORE_PLAN.md
rust/: Cargo.toml
rust/bolt-app-core/: Cargo.toml
rust/bolt-app-core/contracts/: parity_fixture.json  session_contract.schema.json  session_contract.v1.json
rust/bolt-app-core/src/: daemon_lifecycle.rs  daemon_log.rs  ipc_bridge_core.rs  ipc_client.rs  ipc_transport.rs  ipc_types.rs  lib.rs  platform.rs  signal_monitor.rs  signaling_client.rs  watchdog.rs
rust/bolt-app-core/src/contracts/: mod.rs  session_contract.rs
rust/bolt-btr/: Cargo.toml
rust/bolt-btr/src/: constants.rs  encrypt.rs  errors.rs  key_schedule.rs  lib.rs  negotiate.rs  ratchet.rs  replay.rs  state.rs  vectors.rs
rust/bolt-btr/tests/: vector_golden.rs
rust/bolt-core/: Cargo.toml  README.md
rust/bolt-core/src/: constants.rs  crypto.rs  encoding.rs  errors.rs  hash.rs  identity.rs  lib.rs  peer_code.rs  sas.rs  session.rs  vectors.rs
rust/bolt-core/src/transfer_policy/: mod.rs  policy.rs  types.rs
rust/bolt-core/test-vectors/btr/: btr-adversarial.vectors.json  btr-chain-advance.vectors.json  btr-dh-ratchet.vectors.json  btr-dh-sanity.vectors.json  btr-downgrade-negotiate.vectors.json  btr-encrypt-decrypt.vectors.json  btr-key-schedule.vectors.json  btr-lifecycle.vectors.json  btr-replay-reject.vectors.json  btr-transfer-ratchet.vectors.json
rust/bolt-core/test-vectors/core/: box-payload.vectors.json  envelope-open.vectors.json  framing.vectors.json  sas.vectors.json  web-hello-open.vectors.json
rust/bolt-core/tests/: h3_open_vectors.rs  s2_policy_contracts.rs  sas_vectors.rs  vector_compat.rs  vector_equivalence.rs  vector_golden_core.rs
rust/bolt-core/tests/conformance/: envelope_validation.rs  error_code_mapping.rs  main.rs  sas_determinism.rs  state_machine_authority.rs  wire_error_registry.rs
rust/bolt-protocol-wasm/: Cargo.toml
rust/bolt-protocol-wasm/src/: lib.rs
rust/bolt-transfer-core/: Cargo.toml
rust/bolt-transfer-core/src/: backpressure.rs  error.rs  lib.rs  receive.rs  send.rs  state.rs  transport.rs
rust/bolt-transfer-core/src/policy/: decide.rs  mod.rs  progress.rs  stall.rs  types.rs
rust/bolt-transfer-core/tests/: s2a_policy_tests.rs
rust/bolt-transfer-policy-wasm/: Cargo.toml
rust/bolt-transfer-policy-wasm/src/: lib.rs
rust/bolt-ui/: Cargo.toml
rust/bolt-ui-wasm/: .gitignore  Cargo.toml
rust/bolt-ui-wasm/src/: lib.rs  state.rs  theme.rs
rust/bolt-ui-wasm/src/screens/: connect.rs  mod.rs  transfer.rs  verify.rs
rust/bolt-ui-wasm/www/: index.html
rust/bolt-ui/icons/: icon.icns
rust/bolt-ui/src/: app.rs  daemon.rs  ipc.rs  main.rs  state.rs  theme.rs
rust/bolt-ui/src/screens/: connect.rs  main_card.rs  mod.rs  transfer.rs  verify.rs
scripts/: btr-conformance.sh  build-wasm-policy.sh  build-wasm-protocol.sh  verify-btr-constants.sh  verify-constants.sh  verify-no-shadow-sas.sh
ts/bolt-core/: .npmrc  README.md  package-lock.json  package.json  tsconfig.json
ts/bolt-core/__tests__/: btr-adversarial.test.ts  btr-dh-ratchet.test.ts  btr-encrypt-decrypt.test.ts  btr-errors.test.ts  btr-key-schedule.test.ts  btr-lifecycle.test.ts  btr-negotiate.test.ts  btr-replay.test.ts  btr-state.test.ts  constants-s14.test.ts  crypto.test.ts  envelope-open-vectors.test.ts  exports.test.ts  hash.test.ts  hello-open-vectors.test.ts  identity.test.ts  nonce-uniqueness.test.ts  peer-code.test.ts  sas.test.ts  vectors.test.ts  wire-error-codes.test.ts
ts/bolt-core/__tests__/vectors/: box-payload.vectors.json  framing.vectors.json
ts/bolt-core/scripts/: audit-exports.mjs  export-snapshot.json  generate-h3-vectors.mjs  print-test-vectors.mjs
ts/bolt-core/src/: constants.ts  crypto.ts  encoding.ts  errors.ts  hash.ts  identity.ts  index.ts  peer-code.ts  sas.ts  wasm-crypto.ts
ts/bolt-core/src/btr/: constants.ts  encrypt.ts  errors.ts  index.ts  key-schedule.ts  negotiate.ts  ratchet.ts  replay.ts  state.ts
ts/bolt-transport-web/: API.md  package-lock.json  package.json  tsconfig.build.json  vitest.config.ts
ts/bolt-transport-web/src/: index.ts
ts/bolt-transport-web/src/__tests__/: btr4-wire-integration.test.ts  capabilities.test.ts  dm3-discovery-mode.test.ts  file-hash.test.ts  hello.test.ts  identity-store.test.ts  inbound-error-validation.test.ts  n1-backpressure-hang.test.ts  n2-hello-processing-scoped-reset.test.ts  nf1-envelope-filename-validation.test.ts  pin-store.test.ts  policy-adapter.test.ts  profile-envelope-v1.test.ts  proto-harden-regression.test.ts  recon-xfer-1-oneshot-contract.test.ts  replay-protection.test.ts  sa-low-sweep.test.ts  sa10-hello-timeout-downgrade.test.ts  sa12-hello-reentrancy.test.ts  sa5-sa6-lifecycle-harden.test.ts  sa7-sa19-key-zeroization.test.ts  sa9-legacy-plaintext-drops.test.ts  security.test.ts  signaling_golden_vectors.test.ts  transfer-metrics.test.ts  uixfer1-canonical-control.test.ts  verification.test.ts  webrtcservice-h2-enforcement.test.ts  webrtcservice-handshake-gating.test.ts  webrtcservice-lifecycle.test.ts  ws-transport.test.ts  (+1 more)
ts/bolt-transport-web/wasm/: bolt_protocol_wasm.d.ts  bolt_protocol_wasm.js  bolt_protocol_wasm_bg.wasm  bolt_protocol_wasm_bg.wasm.d.ts  bolt_transfer_policy_wasm.d.ts  bolt_transfer_policy_wasm.js  bolt_transfer_policy_wasm_bg.wasm  bolt_transfer_policy_wasm_bg.wasm.d.ts
(+36 files in other folders)
