[package]
name = "bolt-app-core"
version = "0.1.0"
edition = "2021"
description = "Shared app runtime core for LocalBolt native shells (desktop/mobile)"
license = "MIT"

# NATIVE-APP-CORE-1: Extracted from localbolt-app Tauri backend.
# Owns daemon supervision, IPC contract, cross-platform transport,
# signal monitoring, crash diagnostics, and platform path abstraction.
# Zero Tauri dependency — consumable by egui, SwiftUI, Kotlin shells.

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
libc = "0.2"
tungstenite = { version = "0.24", features = ["native-tls"] }
native-tls = "0.2"
