[package]
name = "bolt-btr"
version = "0.1.0"
edition = "2021"
description = "Bolt Transfer Ratchet — per-transfer DH + per-chunk symmetric chain (§16)"
license = "MIT"
repository = "https://github.com/the9ines/bolt-core-sdk"

[features]
default = []
# Enables the vectors module (BTR golden vector generator).
# Pulls serde + serde_json for JSON serialization. Test-only surface.
vectors = ["dep:serde", "dep:serde_json"]
# Exposes BtrTransferContext::new_for_test() — deterministic context
# creation for integration tests. MUST NOT be used in production code.
test-support = []

[dependencies]
bolt-core = { path = "../bolt-core" }
hkdf = "0.12"
sha2 = "0.10"
crypto_secretbox = "0.1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "2"

# Optional deps — only compiled when `vectors` feature is enabled.
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
