[package]
name = "bolt-core"
version = "0.4.0"
edition = "2021"
description = "Canonical Bolt Protocol core — crypto primitives and utilities"
license = "MIT"
repository = "https://github.com/the9ines/bolt-core-sdk"

[features]
default = []
# Enables the vectors module (golden vector generator + integration tests).
# Pulls serde + serde_json for JSON serialization. Test-only surface.
vectors = ["dep:serde", "dep:serde_json"]

[dependencies]
thiserror = "2"
crypto_box = "0.9"
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
# Optional deps — only compiled when `vectors` feature is enabled.
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
