[package]
name = "bolt-transfer-policy-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for bolt-transfer-core policy decisions"
license = "MIT"
repository = "https://github.com/the9ines/bolt-core-sdk"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bolt-transfer-core = { path = "../bolt-transfer-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
