[package]
name = "bolt-ui-wasm"
version = "0.1.0"
edition = "2021"
description = "EW2 measurement PoC — browser egui shell via WASM"

# EW-G9: measurement-only, no consumer integration
# EW-G10: no EW3+ unless EW2 produces unexpectedly strong evidence

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
] }
bolt-core = { path = "../bolt-core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-time = "1"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement", "Element"] }
