[package]
name = "bolt-ui"
version = "0.1.0"
edition = "2021"
description = "Bolt desktop UI — egui/eframe native application shell"

# EN-G4: bolt-ui must be transport-independent.
# AC-EN-14: consumes shared Rust core API (bolt-core) for peer code generation,
#            constants, etc. No direct transport/protocol calls.

[dependencies]
eframe = "0.33"
bolt-core = { path = "../bolt-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
