[package]
name = "bolt-ui"
version = "0.2.0"
edition = "2021"
description = "LocalBolt — Encrypted P2P File Transfer (Desktop)"

# NATIVE-DESKTOP-PKG-1: Standalone desktop app.
# Embeds rendezvous server, manages daemon lifecycle.
# No WebView dependency. Consumes bolt-app-core for runtime.

[dependencies]
eframe = "0.33"
bolt-core = { path = "../bolt-core" }
bolt-app-core = { path = "../bolt-app-core" }
bolt-rendezvous = { git = "https://github.com/the9ines/bolt-rendezvous.git", tag = "rendezvous-v0.2.6-clean-1" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Desktop packaging metadata (cargo-bundle)
# Supports: cargo bundle --release -f osx|deb|rpm|appimage|msi
[package.metadata.bundle]
name = "LocalBolt"
identifier = "com.the9ines.localbolt"
category = "public.app-category.utilities"
short_description = "Encrypted P2P File Transfer"
long_description = "LocalBolt provides encrypted peer-to-peer file transfer on your local network. No cloud, no accounts, no tracking."
copyright = "Copyright © 2026 The9ines"
icon = ["icons/icon.icns", "icons/icon.ico", "icons/icon.png"]

# Linux-specific
[package.metadata.bundle.deb]
depends = []

[package.metadata.bundle.appimage]
# AppImage uses icon.png automatically from the icon list
